# python-examples

./: README.md
kafka/: Dockerfile  README.md  docker-compose.yml
kafka/client-kafka-python/: README.md  pyproject.toml
kafka/client-kafka-python/client_kafka_python/: consumer.py  producer.py
