[tool.poetry]
name = "client-kafka-python"
version = "0.1.0"
description = ""
authors = ["Raffael Tancman <rtancman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.9"
kafka-python = "^2.0.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
